<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRegister">

    <ImageView
        android:id="@+id/login_logoImageView"
        android:src="@drawable/ic_loginlogo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tint="@color/colorLogoAlpha" />

    <!--LAYOUT PADRE PARA CENTRAR VERTICALMENTE-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_layoutParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!--LAYOUT FORMULARIO-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/register_layoutForm"
            android:layout_margin="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/register_Button">

            <TextView
                android:id="@+id/register_usernameTextView"
                android:text="@string/register_username_text"
                android:layout_marginEnd="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/register_passwordTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/register_usernameEditText"/>

            <EditText
                android:id="@+id/register_usernameEditText"
                android:hint="@string/register_username_text"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/register_usernameTextView"
                app:layout_constraintBottom_toBottomOf="@id/register_usernameTextView"
                app:layout_constraintStart_toEndOf="@id/register_usernameTextView"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/register_passwordTextView"
                android:text="@string/register_password_text"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/register_usernameTextView"
                app:layout_constraintBottom_toTopOf="@id/register_confirmpwdTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/register_passwordEditText" />

            <EditText
                android:id="@+id/register_passwordEditText"
                android:hint="@string/register_password_text"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/register_passwordTextView"
                app:layout_constraintBottom_toBottomOf="@id/register_passwordTextView"
                app:layout_constraintStart_toEndOf="@id/register_passwordTextView"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/register_confirmpwdTextView"
                android:text="@string/register_repeatPassword_text"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/register_passwordTextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/register_confirmpwdEditText" />

            <EditText
                android:id="@+id/register_confirmpwdEditText"
                android:hint="@string/register_repeatPasswordHint_text"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/register_confirmpwdTextView"
                app:layout_constraintBottom_toBottomOf="@id/register_confirmpwdTextView"
                app:layout_constraintStart_toEndOf="@id/register_confirmpwdTextView"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_Button"
            android:text="@string/register_createUser_text"
            android:textColor="@color/white"
            android:background="@color/colorMain"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/register_layoutForm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <!--LOADING FEEDBACK-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_loadingFeedbackLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loadingBackground"
        android:elevation="10dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="30dp"
            android:focusable="true">

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:indeterminate="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/loadingFeedback"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>