<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogin">

    <!--LOGO Y TITULO-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layoutLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_layoutLogin">

        <ImageView
            android:id="@+id/login_logoImageView"
            android:src="@drawable/ic_loginlogo"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/login_titleTextView"
            app:tint="@color/colorMain" />

        <TextView
            android:id="@+id/login_titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/login_title_text"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/login_logoImageView"
            app:layout_constraintBottom_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--FORMULARIO Y BOTONES-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toBottomOf="@id/login_layoutLogo"
        app:layout_constraintBottom_toBottomOf="parent">

        <!--FORMULARIO-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_layoutForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/login_layoutButtons">

            <TextView
                android:id="@+id/login_usernameTextView"
                android:text="@string/login_username_text"
                android:layout_marginEnd="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/login_passwordTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/login_usernameEditText"/>

            <EditText
                android:id="@+id/login_usernameEditText"
                android:hint="@string/login_username_text"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/login_usernameTextView"
                app:layout_constraintBottom_toBottomOf="@id/login_usernameTextView"
                app:layout_constraintStart_toEndOf="@id/login_usernameTextView"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/login_passwordTextView"
                android:text="@string/login_password_text"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/login_usernameTextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/login_passwordEditText" />

            <EditText
                android:id="@+id/login_passwordEditText"
                android:hint="@string/login_password_text"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/login_passwordTextView"
                app:layout_constraintBottom_toBottomOf="@id/login_passwordTextView"
                app:layout_constraintStart_toEndOf="@id/login_passwordTextView"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--BOTONES-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_layoutButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_layoutForm"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_loginButton"
                android:text="@string/login_buttonLogin_text"
                android:background="@color/colorMain"
                android:textColor="@color/white"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/login_RegisterButton"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_RegisterButton"
                android:text="@string/login_buttonRegister_text"
                android:layout_marginTop="8dp"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_loginButton"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--LOADING FEEDBACK-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_loadingFeedbackLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loadingBackground"
        android:elevation="10dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="30dp"
            android:focusable="true">

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:indeterminate="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/loadingFeedback"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>